package br.unitins.topicos1.dto;

public record AuthorDTO (
    String authorName,
    String email
){
    
}
