package br.unitins.topicos1.model;

import jakarta.persistence.Entity;

@Entity
public class Person extends DefaultEntity {
    private String name;
    private String cpf;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getCpf() {
        return cpf;
    }

    public void setCpf(String cpf) {
        this.cpf = cpf;
    }

}
