@startuml

    class Product{
        - name: String
        - price: Double
        - inventory: Integer
    }

    enum Binding{
        - HARDCOVER: int
        - PAPERBACK: int
    }

    class Publisher{
        - name: String
    }

    class Person{
        - name: String
        - cpf: String
    }

    class User{
        - username: String
        - email: String
        - password: String
    }

    class Phone{
        - areaCode: String
        - number: String
    }

    class Author{
        - comics: Comic
    }

    enum Type{
        - MANGA: int
        - COMIC: int
    }

    enum UserType{
        - ADMIN: int
        - USER: int
    }

    class Comic{
        - numPages: Integer
        - binding: Binding
        - publisher: Publisher
        - author: Author
        - type: Type
    }

    class Address{
        - state: State
        - city: City
        - zipCode: String
        - phoneNumber: Phone
        - address: String
        - addressComplement: String
    }

    class Purchase{
        - data: LocalDateTime
    }

    class ItemPurchase{
        - preco: Double
        - quantidade: Integer
    }

    class PurchaseStatus{
        date: LocalDateTime
    }

    enum Status{
        awaitingPayment: int
        verifyingPayment: int
        paymentComplete: int
        shipping: int
        shipped: int
        arrived: int
        completed: int
        canceled: int
    }


    Purchase "1" *--> "*" ItemPurchase
    Purchase "*" --> "1" User
    ItemPurchase "*" --> "1" Comic


    Comic -up-> Product
    Comic "*" --> "1" Binding
    Comic "*" --> "1" Type
    Comic "*" --> "1" Publisher
    Comic "*" --> "*" Author

    User "1" --> "*" Phone
    User "1" --> "*" Address
    User "1" --> "1" UserType

    Author -up-> Person

    User "1" --> Comic: listaDesejo

    Purchase "1" --> "1" PurchaseStatus
    PurchaseStatus "1" --> "*" Status


@enduml